// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutList: Match snapshots 1 1`] = `
<View>
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    key="Version 1.0.0-alpha.3"
    leftIcon={
      Object {
        "color": "#009CFF",
        "name": "versions",
        "onPress": [Function],
        "type": "octicon",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#17212D",
              },
            ]
          }
        >
          Version 1.0.0-alpha.3
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    key="Fork this Project on GitHub"
    leftIcon={
      Object {
        "color": "#F50AE1",
        "name": "code-fork",
        "onPress": [Function],
        "type": "font-awesome",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#17212D",
              },
            ]
          }
        >
          Fork this Project on GitHub
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    key="Personal GitLab"
    leftIcon={
      Object {
        "color": "#FF9501",
        "name": "gitlab",
        "onPress": [Function],
        "type": "font-awesome",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#17212D",
              },
            ]
          }
        >
          Personal GitLab
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    key="Personal Website"
    leftIcon={
      Object {
        "color": "#4CDA64",
        "name": "web",
        "onPress": [Function],
        "type": "material-community",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#17212D",
              },
            ]
          }
        >
          Personal Website
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    key="Rate the App"
    leftIcon={
      Object {
        "color": "#FD3C2D",
        "name": "rate-review",
        "onPress": [Function],
        "type": "material",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#17212D",
              },
            ]
          }
        >
          Rate the App
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
</View>
`;

exports[`AboutList: Match snapshots 2 1`] = `
<View>
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    key="Version 1.0.0-alpha.3"
    leftIcon={
      Object {
        "color": "#009CFF",
        "name": "versions",
        "onPress": [Function],
        "type": "octicon",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#FFF",
              },
            ]
          }
        >
          Version 1.0.0-alpha.3
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    key="Fork this Project on GitHub"
    leftIcon={
      Object {
        "color": "#F50AE1",
        "name": "code-fork",
        "onPress": [Function],
        "type": "font-awesome",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#FFF",
              },
            ]
          }
        >
          Fork this Project on GitHub
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    key="Personal GitLab"
    leftIcon={
      Object {
        "color": "#FF9501",
        "name": "gitlab",
        "onPress": [Function],
        "type": "font-awesome",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#FFF",
              },
            ]
          }
        >
          Personal GitLab
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    key="Personal Website"
    leftIcon={
      Object {
        "color": "#4CDA64",
        "name": "web",
        "onPress": [Function],
        "type": "material-community",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#FFF",
              },
            ]
          }
        >
          Personal Website
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    key="Rate the App"
    leftIcon={
      Object {
        "color": "#FD3C2D",
        "name": "rate-review",
        "onPress": [Function],
        "type": "material",
      }
    }
    title={
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Light",
              },
              Object {
                "color": "#FFF",
              },
            ]
          }
        >
          Rate the App
        </Text>
      </TouchableOpacity>
    }
    topDivider={true}
  />
</View>
`;

exports[`AboutList: Match snapshots 3 1`] = `<View />`;

exports[`AboutList: Match snapshots Title 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Light",
        },
        Object {
          "color": "#FFF",
        },
      ]
    }
  >
    Version 1.0.0-alpha.3
  </Text>
</TouchableOpacity>
`;
